# Translator

./: RELEASE_NOTES.md  package.json
.github/workflows/: dev-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/commands/: cursor.rs  updater.rs
src/app/: globals.css
src/app/popup/: page.tsx
